feat: html pages

--- a/index.html
+++ b/index.html
@@ -12,17 +12,19 @@
   </head>
   <body>
     <header>
-        <nav>
-            <label class="logo">Onye-IJE</label>
-            <ul>
-                <li><a href="index.html" class="navbar-item"></a></li>
-                <li><a href="services.html" class="navbar-item"></a></li>
-                <li><a href="gallery.html" class="navbar-item"></a></li>
-                <li><a href="about.html" class="navbar-item"></a></li>
-                <li><a href="contact.html" class="navbar-item"></a></li>
-            </ul>
-        </nav>
+      <nav>
+        <label class="logo">Onye-IJE</label>
+        <ul>
+          <li><a href="index.html" class="navbar-item"></a></li>
+          <li><a href="services.html" class="navbar-item"></a></li>
+          <li><a href="gallery.html" class="navbar-item"></a></li>
+          <li><a href="about.html" class="navbar-item"></a></li>
+          <li><a href="contact.html" class="navbar-item"></a></li>
+        </ul>
+      </nav>
     </header>
-
+    <div id="mbu">
+      <h5>Abia State, God's Own State</h5>
+    </div>
   </body>
 </html>
