--- a/index.html
+++ b/index.html
@@ -15,16 +15,23 @@
       <nav>
         <label class="logo">Onye-IJE</label>
         <ul>
-          <li><a href="index.html" class="navbar-item"></a></li>
-          <li><a href="services.html" class="navbar-item"></a></li>
-          <li><a href="gallery.html" class="navbar-item"></a></li>
-          <li><a href="about.html" class="navbar-item"></a></li>
-          <li><a href="contact.html" class="navbar-item"></a></li>
+          <li><a href="index.html" class="navbar-item">Home</a></li>
+          <li><a href="services.html" class="navbar-item">Services</a></li>
+          <li><a href="gallery.html" class="navbar-item">Gallery</a></li>
+          <li><a href="about.html" class="navbar-item">About Us</a></li>
+          <li><a href="contact.html" class="navbar-item">Contact Us</a></li>
         </ul>
       </nav>
     </header>
     <div id="mbu">
       <h5>Abia State, God's Own State</h5>
+    </div>
+    <div class="welcome">
+        <h1 id="welcome">Welcome to Onye-Ije</h1>
+        <p id="onye">
+            We are <span id="ije">Onye-Ije</span>Tourism Company, <br><strong>Just showcasing Abia State heritage and culture to the world</strong>
+        </p>
+
     </div>
   </body>
 </html>
