feat: add css page

--- a/index.html
+++ b/index.html
@@ -29,9 +29,18 @@
     <div class="welcome">
         <h1 id="welcome">Welcome to Onye-Ije</h1>
         <p id="onye">
-            We are <span id="ije">Onye-Ije</span>Tourism Company, <br><strong>Just showcasing Abia State heritage and culture to the world</strong>
+            We are <span id="ije">Onye-Ije</span> Tourism Company, <br><strong>Just showcasing Abia State heritage and culture to the world</strong>
         </p>
-
+        <p id="permit">
+            With your permission, we will navigate you around Abia State. <br>And it's highly affordable and we are very reliable.
+        </p>
     </div>
+    <section class="content">
+        <div class="column">
+            <h2>Abia State Attire</h2>
+
+        </div>
+
+    </section>
   </body>
 </html>
