--- a/services.html
+++ b/services.html
@@ -15,11 +15,11 @@
         <nav>
             <label class="logo">Onye-IJE</label>
             <ul>
-                <li><a href="index.html" class="navbar-item"></a></li>
-                <li><a href="services.html" class="navbar-item"></a></li>
-                <li><a href="gallery.html" class="navbar-item"></a></li>
-                <li><a href="about.html" class="navbar-item"></a></li>
-                <li><a href="contact.html" class="navbar-item"></a></li>
+                <li><a href="index.html" class="navbar-item">Home</a></li>
+                <li><a href="services.html" class="navbar-item">Services</a></li>
+                <li><a href="gallery.html" class="navbar-item"></a>Gallery</li>
+                <li><a href="about.html" class="navbar-item"></a>About Us</li>
+                <li><a href="contact.html" class="navbar-item"></a>Contact Us</li>
             </ul>
         </nav>
     </header>
