--- a/services.html
+++ b/services.html
@@ -1,28 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Tourism in Abia State">
-    <meta name="keywords" content="Abia State, tourism, Onye-Ije Tourism Company">
-    <meta name="author" content="Charles Onye">
-    <link rel="stylesheet" href="assets/css/style.css">
-    <title>Onye-Ije Tourism Company</title>
-  </head>
-  <body>
-    <header>
-        <nav>
-            <label class="logo">Onye-IJE</label>
-            <ul>
-                <li><a href="index.html" class="navbar-item">Home</a></li>
-                <li><a href="services.html" class="navbar-item">Services</a></li>
-                <li><a href="gallery.html" class="navbar-item"></a>Gallery</li>
-                <li><a href="about.html" class="navbar-item"></a>About Us</li>
-                <li><a href="contact.html" class="navbar-item"></a>Contact Us</li>
-            </ul>
-        </nav>
-    </header>
-
-  </body>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="description" content="Tourism in Abia State">
+        <meta name="keywords" content="Abia State, tourism, Onye-Ije Tourism Company">
+        <meta name="author" content="Charles Onye">
+        <link rel="stylesheet" href="assets/css/style.css">
+        <title>Onye-Ije Tourism Company</title>
+    </head>
+    <body>
+        <header>
+            <nav>
+                <label class="logo">Onye-IJE</label>
+                <ul>
+                    <li><a href="index.html" class="navbar-item">Home</a></li>
+                    <li><a href="services.html" class="navbar-item">Services</a></li>
+                    <li><a href="gallery.html" class="navbar-item"></a>Gallery</li>
+                    <li><a href="about.html" class="navbar-item"></a>About Us</li>
+                    <li><a href="contact.html" class="navbar-item"></a>Contact Us</li>
+                </ul>
+            </nav>
+        </header>
+        <div class="our">
+            <h1>Our Services</h1>
+            <p>
+                Welcome to Onye-Ije Tourism Company, where we offer a range of exciting and memorable services to make your
+                visit to Abia State an unforgettable experience.
+            </p>
+            <p>Our Main Focus is our tourist satisfaction</p>
+            <strong>Managed by highly qualified and experienced tour guides</strong>
+            <p>
+                We intend to make the travel experience of every person who seeks Onye-Ije Tourism Company a very
+                memorable one.
+            </p>
+        </div>
+        <section class="services">
+            <div>
+                <figure>
+                    <img src="assets/images/arochukwu-long.png" alt="Slave Shrine">
+                    <figcaption>Heritage Tours</figcaption>
+                </figure>
+                <p>
+                    Discover the rich cultural heritage of Abia State with our guided heritage tours.
+                    Visit ancient landmarks, traditional villages, and immerse yourself in the local customs and traditions.
+                </p>
+            </div>
+        </section>
+    </body>
 </html>
