feat: add images to the services page

--- a/services.html
+++ b/services.html
@@ -47,6 +47,27 @@
                     Visit ancient landmarks, traditional villages, and immerse yourself in the local customs and traditions.
                 </p>
             </div>
+            <div class="services">
+                <figure>
+                    <img src="assets/images/azumini-blue.png" alt="Azumini-Blue">
+                    <figcaption>Nature Excursion</figcaption>
+                </figure>
+                <p>
+                    Explore the breathtaking natural beauty of Abia State with our nature excursions. Hike through Ohafia
+                    forests, experience the blue colour of Azumini-Blue river, and encounter diverse wildlife in their natural habitats.
+                </p>
+            </div>
+            <div class="services">
+                <figure>
+                    <img src="assets/images/ofe-ukazi.png" alt="Ofe-Ukazi">
+                    <figcaption>Culinary Adventures</figcaption>
+                </figure>
+                <p>
+                    Taste the authentic flavours of Abia State with our culinary adventures. Indulge in traditional dishes and
+                    savor the unique blend of local ingredients and spices.
+                </p>
+
+            </div>
         </section>
     </body>
 </html>
