--- a/index.html
+++ b/index.html
@@ -152,66 +152,69 @@
         </article>
         <section class="testimonials">
             <h2>What Our Customers Say</h2>
-            <div class="testimonials-grid">
+            <div class="wrapper">
                 <div class="box">
+                    <p class="best">
+                        The tour organized by Onye-Ije Tourism Company was simply outstanding. Our guide was
+                        knowledgeable and made sure we experienced the best of Abia State's culture and natural beauty.
+                        Highly recommended.
+                    </p>
                     <div class="tour">
-                        <div class="image">
-                            <img src="assets/images/onyeami.jpg" alt="Onyeami" class="photo">
-                        </div>
                         <div class="info">
-                            <p>The tour organized by Onye-Ije Tourism Company was simply outstanding. Our guide was
-                            knowledgeable and made sure we experienced the best of Abia State's culture and natural beauty.
-                            </p>
                             <div class="name">Andy Hart</div>
                             <div class="job">Software Engineer</div>
                         </div>
                     </div>
+                    <div class="image">
+                        <img src="assets/images/onyeami.jpg" alt="Onyeami" class="photo">
+                    </div>
                 </div>
                 <div class="box">
+                    <p class="best">
+                        They are simply the best!. I had the most incredible experience exploring Abia State,
+                        thanks to the exceptional services provided by Onye-Ije Tourism Company. From start to finish, 
+                        their team exhibited unmatched professionalism and hospitality.
+                    </p>
                     <div class="tour">
-                        <div class="image">
-                            <img src="assets/images/martins.JPG" alt="Martins" class="photo">
-                        </div>
                         <div class="info">
-                            <p class="best">
-                                They are simply the best!. I had the most incredible experience exploring Abia State,
-                                thanks to the exceptional services provided by Onye-Ije Tourism Company. the knowledgeable
-                                guides shared.
-                            </p>
                             <div class="name">Martins Machi</div>
                             <div class="job">TV Presenter</div>
                         </div>
                     </div>
+                    <div class="image">
+                        <img src="assets/images/martins.JPG" alt="Martins" class="photo">
+                    </div>
                 </div>
                 <div class="box">
+                    <p class="best">
+                        Wasn’t quite sure what brought me to Nigeria last December. So one of my friends informed me
+                        about Onye-Ije Tourism Company, then I booked with them and travelled to Abia State. The well-curated 
+                        tours allowed me to discover hidden gems and iconic landmarks, making my trip truly unforgettable.
+                    </p>
                     <div class="tour">
-                        <div class="image">
-                            <img src="assets/images/ekene.jpg" alt="Jerry" class="photo">
-                        </div>
                         <div class="info">
-                            <p class="best">
-                                Wasn’t quite sure what brought me to Nigeria last December. So one of my friends informed me
-                                about Onye-Ije Tourism Company, then I booked with them and travelled to Abia State. Though still not
-                                quite
-                            </p>
                             <div class="name">Jerry Ekene</div>
                             <div class="job">Biochemist</div>
                         </div>
                     </div>
+                    <div class="image">
+                        <img src="assets/images/ekene.jpg" alt="Jerry" class="photo">
+                    </div>
                 </div>
                 <div class="box">
+                    <p class="best">
+                        During our tour, the knowledgeable guides shared fascinating insights about Abia State's history
+                        and culture, adding depth to my journey. Without a doubt, I will highly recommend Onye-Ije Tourism Company 
+                        to anyone seeking an enriching and seamless travel experience in Abia State.
+                    </p>
                     <div class="tour">
-                        <div class="image">
-                            <img src="assets/images/chuks.jpg" alt="Chuks" class="photo">
-                        </div>
                         <div class="info">
-                            <p class="best">
-                                During our tour, the knowledgeable guides shared fascinating insights about Abia State's history
-                                and culture, adding depth to my journey. Without a doubt, thanks to the exceptional services.
-                            </p>
                             <div class="name">Chuks Daniel</div>
                             <div class="job">Civil Engineer</div>
                         </div>
+                    </div>
+                    <div class="image">
+                        <img src="assets/images/chuks.jpg" alt="Chuks" class="photo">
                     </div>
                 </div>
             </div>
