feat: added css media screen

--- a/index.html
+++ b/index.html
@@ -155,9 +155,9 @@
             <div class="wrapper">
                 <div class="box">
                     <p class="best">
-                        The tour organized by Onye-Ije Tourism Company was simply outstanding. Our guide was
+                        The tour organized by Onye-Ije Tourism Company was simply outstanding. Our guides were
                         knowledgeable and made sure we experienced the best of Abia State's culture and natural beauty.
-                        Highly recommended.
+                        Every region has its own sensory identity and Abia State is wonderfully unique.
                     </p>
                     <div class="tour">
                         <div class="info">
@@ -173,7 +173,8 @@
                     <p class="best">
                         They are simply the best!. I had the most incredible experience exploring Abia State,
                         thanks to the exceptional services provided by Onye-Ije Tourism Company. From start to finish, 
-                        their team exhibited unmatched professionalism and hospitality.
+                        their team exhibited unmatched professionalism and hospitality. Visiting Azumini-Blue river is 
+                        a time experience.
                     </p>
                     <div class="tour">
                         <div class="info">
