--- a/services.html
+++ b/services.html
@@ -17,9 +17,9 @@
                 <ul>
                     <li><a href="index.html" class="navbar-item">Home</a></li>
                     <li><a href="services.html" class="navbar-item">Services</a></li>
-                    <li><a href="gallery.html" class="navbar-item"></a>Gallery</li>
-                    <li><a href="about.html" class="navbar-item"></a>About Us</li>
-                    <li><a href="contact.html" class="navbar-item"></a>Contact Us</li>
+                    <li><a href="gallery.html" class="navbar-item">Gallery</a></li>
+                    <li><a href="about.html" class="navbar-item">About Us</a></li>
+                    <li><a href="contact.html" class="navbar-item">Contact Us</a></li>
                 </ul>
             </nav>
         </header>
