feat: added services html page

--- a/services.html
+++ b/services.html
@@ -37,7 +37,7 @@
             </p>
         </div>
         <section class="services">
-            <div>
+            <div class="service">
                 <figure>
                     <img src="assets/images/arochukwu-long.png" alt="Slave Shrine">
                     <figcaption>Heritage Tours</figcaption>
@@ -47,7 +47,7 @@
                     Visit ancient landmarks, traditional villages, and immerse yourself in the local customs and traditions.
                 </p>
             </div>
-            <div class="services">
+            <div class="service">
                 <figure>
                     <img src="assets/images/azumini-blue.png" alt="Azumini-Blue">
                     <figcaption>Nature Excursion</figcaption>
@@ -57,7 +57,7 @@
                     forests, experience the blue colour of Azumini-Blue river, and encounter diverse wildlife in their natural habitats.
                 </p>
             </div>
-            <div class="services">
+            <div class="service">
                 <figure>
                     <img src="assets/images/ofe-ukazi.png" alt="Ofe-Ukazi">
                     <figcaption>Culinary Adventures</figcaption>
@@ -66,7 +66,26 @@
                     Taste the authentic flavours of Abia State with our culinary adventures. Indulge in traditional dishes and
                     savor the unique blend of local ingredients and spices.
                 </p>
-
+            </div>
+            <div class="service">
+                <figure>
+                    <img src="assets/images/akwete.png" alt="Akwete Clothes">
+                    <img src="assets/images/aba-made.png" alt="Aba Made">
+                    <figcaption>Art and Craft Workshops</figcaption>
+                </figure>
+                <p>
+                    Engage in creative art and craft workshops. See Akwete traditional cloth weaving and get some for your
+                    souvenirs to take home.
+                </p>
+            </div>
+            <div class="service">
+                <figure>
+                    <video src="assets/videos/ekpo-moving.MOV" width="400" controls autoplay muted></video>
+                    <figcaption>Ekpe Cultural Festival</figcaption>
+                </figure>
+                <p>
+                    Showcasing the rich cultural heritage of Abia State.
+                </p>
             </div>
         </section>
     </body>
