feat: add css to the services page

--- a/services.html
+++ b/services.html
@@ -88,5 +88,50 @@
                 </p>
             </div>
         </section>
+        <article class="contact">
+            <div>
+                <p>
+                    Ready to embark on an unforgettable journey through Abia State? Get in touch with us now to
+                    book your tour or to inquire about our services.
+                </p>
+            </div>
+            <form>
+                <section id="aro">
+                    <label for="city">City</label>
+                    <select name="city" id="city">
+                        <option value="arochukwu">Arochukwu</option>
+                        <option value="umuahia">Umuahia</option>
+                        <option value="aba">Aba</option>
+                        <option value="isuikwuato">Isuikwuato</option>
+                        <option value="ohafia">Ohafia</option>
+                        <option value="ukwa">Ukwa</option>
+                        <option value="abiriba">Abiriba</option>
+                    </select>
+                </section>
+                <section>
+                    <fieldset>
+                        <legend>Your Details</legend>
+                        <div>
+                            <label for="name">Name</label>
+                            <input type="text" id="name" name="name" placeholder="Your Name" required>
+                        </div>
+                        <div>
+                            <label for="email">Email</label>
+                            <input type="email" id="email" placeholder="Your Email" required>
+                        </div>
+                        <div>
+                            <label for="phone">Phone</label>
+                            <input type="tel" id="phone" placeholder="Your Phone Number" required>
+                        </div>
+                    </fieldset>
+                </section>
+                <section id="start">
+                    <label for="start">Start Date</label>
+                    <input type="date" id="start-date" required>
+                    <label for="end">End Date</label>
+                    <input type="date" id="end-date" required>
+                </section>
+            </form>
+        </article>
     </body>
 </html>
