--- a/services.html
+++ b/services.html
@@ -131,7 +131,19 @@
                     <label for="end">End Date</label>
                     <input type="date" id="end-date" required>
                 </section>
+                <section id="additional-info">
+                    <label for="additional">Additional Information</label>
+                    <textarea name="additional" id="additional" cols="50" rows="10" placeholder="Write something here ..."></textarea>
+                </section>
+                <input type="submit" value="Inquire Now">
             </form>
         </article>
+        <footer>
+            <span>Find us on:</span>
+            <a href="https://www.facebook.com/" target="_blank" rel="noopener">Facebook</a>
+            <a href="https://www.instagram.com/" target="_blank" rel="noopener">Instagram</a>
+            <a href="https://twitter.com/" target="_blank" rel="noopener">Twitter</a>
+            <p>© 2023 Onye-Ije Tourism Company</p>
+        </footer>
     </body>
 </html>
