--- a/contact.html
+++ b/contact.html
@@ -15,11 +15,11 @@
         <nav>
             <label class="logo">Onye-IJE</label>
             <ul>
-                <li><a href="index.html" class="navbar-item"></a></li>
-                <li><a href="services.html" class="navbar-item"></a></li>
-                <li><a href="gallery.html" class="navbar-item"></a></li>
-                <li><a href="about.html" class="navbar-item"></a></li>
-                <li><a href="contact.html" class="navbar-item"></a></li>
+                <li><a href="index.html" class="navbar-item">Home</a></li>
+                <li><a href="services.html" class="navbar-item">Services</a></li>
+                <li><a href="gallery.html" class="navbar-item">Gallery</a></li>
+                <li><a href="about.html" class="navbar-item">About Us</a></li>
+                <li><a href="contact.html" class="navbar-item">Contact Us</a></li>
             </ul>
         </nav>
     </header>
