--- a/contact.html
+++ b/contact.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+    <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,8 +9,8 @@
     <meta name="author" content="Charles Onye">
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Onye-Ije Tourism Company</title>
-  </head>
-  <body>
+    </head>
+    <body>
     <header>
         <nav>
             <label class="logo">Onye-IJE</label>
@@ -23,6 +23,72 @@
             </ul>
         </nav>
     </header>
+    <div>
+        <h1>Contact Us</h1>
+        <p>
+            Feel free to get in touch with us for any inquiries or to book your next adventure in Abia State.
+        </p>
+    </div>
+    <section>
+        <div>
+            <h5>Onye-Ije is a Nigerian, award-winning tourism service provider.</h5>
+            <p>
+                We are driven by success. <br> We are not only the pioneers but the best vacation planners in Abia State.
+            </p>
+        </div>
+    </section>
+    <section>
+        <p>We would like to hear from you. <br>Get in Touch with us any of the our offices below</p>
+        <div>
+            <table class="contact-table">
+                <caption>Our Office Contacts</caption>
+                <tr>
+                    <th>City</th>
+                    <th>Phone Number</th>
+                    <th>Email</th>
+                </tr>
+                <tr>
+                    <td>Umuahia</td>
+                    <td>12345</td>
+                    <td>twecharles@gmail.com</td>
+                </tr>
+                <tr>
+                    <td>Aba</td>
+                    <td>67891</td>
+                    <td>twecharles@yahoo.com</td>
+                </tr>
+                <tr>
+                    <td>Arochukwu</td>
+                    <td>23456</td>
+                    <td>hartandy15@yahoo.com</td>
+                </tr>
+            </table>
+        </div>
+    </section>
+    <section>
+        <div>
+            <p class="feedback">
+                Tell them if we have done well. Tell us if we did bad.
+            </p>
+            <form>
+                <label for="feedback" class="feedback">Feedback:</label>
+                <br>
+                <textarea name="feedback" class="feedback"
+                    placeholder="Your feedback is highly appreciated, we can only do better if you tell us." cols="50"
+                    rows="20">
+                    </textarea>
+            </form>
+        </div>
+    </section>
+    
+    <footer>
+        <span>Find us on:</span>
+        <a href="https://www.facebook.com/" target="_blank" rel="noopener">Facebook</a>
+        <a href="https://www.instagram.com/" target="_blank" rel="noopener">Instagram</a>
+        <a href="https://twitter.com/" target="_blank" rel="noopener">Twitter</a>
+        <p>© 2023 Onye-Ije Tourism Company</p>
+    </footer>
+
 
   </body>
 </html>
