feat: added more images

--- a/gallery.html
+++ b/gallery.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+    <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,20 +9,27 @@
     <meta name="author" content="Charles Onye">
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Onye-Ije Tourism Company</title>
-  </head>
-  <body>
-    <header>
-        <nav>
-            <label class="logo">Onye-IJE</label>
-            <ul>
-                <li><a href="index.html" class="navbar-item"></a></li>
-                <li><a href="services.html" class="navbar-item"></a></li>
-                <li><a href="gallery.html" class="navbar-item"></a></li>
-                <li><a href="about.html" class="navbar-item"></a></li>
-                <li><a href="contact.html" class="navbar-item"></a></li>
-            </ul>
-        </nav>
-    </header>
+    </head>
+    <body>
+        <header>
+            <nav>
+                <label class="logo">Onye-IJE</label>
+                <ul>
+                    <li><a href="index.html" class="navbar-item">Home</a></li>
+                    <li><a href="services.html" class="navbar-item">Services</a></li>
+                    <li><a href="gallery.html" class="navbar-item">Gallery</a></li>
+                    <li><a href="about.html" class="navbar-item">About Us</a></li>
+                    <li><a href="contact.html" class="navbar-item">Contact Us</a></li>
+                </ul>
+            </nav>
+        </header>
+        <div class="our">
+            <h1>Gallery</h1>
+            <p>
+                Take a glimpse of the breathtaking experience and captivating moments that await you in Abia State. 
+                Our <strong>gallery showcases the beauty and diversity of the enchanting destination.</strong>
+            </p>
+        </div>
 
-  </body>
+    </body>
 </html>
