--- a/gallery.html
+++ b/gallery.html
@@ -30,6 +30,34 @@
                 Our <strong>gallery showcases the beauty and diversity of the enchanting destination.</strong>
             </p>
         </div>
+        <section class="gallery">
+            <div class="item">
+                <img src="assets/images/achalla.png" alt="Recipe">
+                <div class="overlay">
+                    <p>Abia State soup recipe</p>
+                </div>
+            </div>
+            <div class="item">
+                <img src="assets/images/egusi.png" alt="Egusi Soup">
+                <div class="overlay">
+                    <p>Egusi, the main Igbo delicacy</p>
+                </div>
+            </div>
+            <div class="item">
+                <img src="assets/images/stock-fish.png" alt="Stock Fish">
+                <div class="overlay">
+                    <p>Stock Fish delicacy</p>
+                </div>
+            </div>
+            <div class="item">
+                <img src="assets/images/abacha.png" alt="African Salad">
+                <div class="overlay">
+                    <p>African Salad, the pride of every menu</p>
+                </div>
+            </div>
+
+
+        </section>
 
     </body>
 </html>
