feat: styling html page

--- a/gallery.html
+++ b/gallery.html
@@ -55,9 +55,43 @@
                     <p>African Salad, the pride of every menu</p>
                 </div>
             </div>
-
-
+            <div class="item">
+                <img src="assets/images/akwete1.png" alt="Akwete Weaving">
+                <div class="overlay">
+                    <p>The weaving of Akwete fabrics</p>
+                </div>
+            </div>
+            <div class="item">
+                <img src="assets/images/long-juju.png" alt="Slave Cave">
+                <div class="overlay">
+                    <p>The Long Juju Cave in Arochukwu</p>
+                </div>
+            </div>
+            <div class="item">
+                <img src="assets/images/ojukwu-bunker.png" alt="Ojukwu Bunker">
+                <div class="overlay">
+                    <p>Ojukwu bunker in Umuahia, used during the Nigerian civil war</p>
+                </div>
+            </div>
+            <div class="item">
+                <img src="assets/images/war-museum.png" alt="War Museum">
+                <div class="overlay">
+                    <p>War Museum</p>
+                </div>
+            </div>
+            <div class="video-item">
+                <video src="assets/videos/nwa-dancing.MOV" controls autoplay muted></video>
+                <div class="overlay">
+                    <p>Ekpe Festival in Umuahia</p>
+                </div>
+            </div>
         </section>
-
+        <footer>
+            <span>Find us on:</span>
+            <a href="https://www.facebook.com/" target="_blank" rel="noopener">Facebook</a>
+            <a href="https://www.instagram.com/" target="_blank" rel="noopener">Instagram</a>
+            <a href="https://twitter.com/" target="_blank" rel="noopener">Twitter</a>
+            <p>© 2023 Onye-Ije Tourism Company</p>
+        </footer>
     </body>
 </html>
