--- a/about.html
+++ b/about.html
@@ -23,7 +23,7 @@
                 </ul>
             </nav>
         </header>
-        <div>
+        <div class="about">
             <h1>About Us</h1>
             <p>Welcome to Onye-Ije Tourism Company. We take good care of your leisure while in Abia State</p>
             <figure>
@@ -36,7 +36,7 @@
                 experiences to travellers from around the globe.
             </p>
         </div>
-        <div>
+        <div class="mission">
             <h2>Our Mission</h2>
             <p>
                 At Onye-Ije Tourism Company, our mission is to showcase the cultural, natural and historical heritage
@@ -74,7 +74,7 @@
                 </li>
             </ul>
         </div>        
-        <section>
+        <section class="discover">
             <div>
                 <h2>Discover Abia: Unveiling Nature's Wonders</h2>
                 <p>
