added some images

--- a/gallery.html
+++ b/gallery.html
@@ -79,8 +79,32 @@
                     <p>War Museum</p>
                 </div>
             </div>
+            <div class="item">
+                <img src="assets/images/absu.png" alt="Abia University">
+                <div class="overlay">
+                    <p>Abia State University, Uturu</p>
+                </div>
+            </div>
+            <div class="item">
+                <img src="assets/images/abiaattire2.jpg" alt="Abia State attire">
+                <div class="overlay">
+                    <p>Abia State Attire</p>
+                </div>
+            </div>
+            <div class="item">
+                <img src="assets/images/azumini1.png" alt="Azumini Blue River">
+                <div class="overlay">
+                    <p>Azumini Blue River</p>
+                </div>
+            </div>
+            <div class="item">
+                <img src="assets/images/ekpe1.JPG" alt="Cultural Festival">
+                <div class="overlay">
+                    <p>Cultural Festival</p>
+                </div>
+            </div>
             <div class="video-item">
-                <video src="assets/videos/nwa-dancing.MOV" controls autoplay muted></video>
+                <video src="assets/videos/nwa-dancing.MOV" width="400" height="400" controls autoplay muted></video>
                 <div class="overlay">
                     <p>Ekpe Festival in Umuahia</p>
                 </div>
