--- a/gallery.html
+++ b/gallery.html
@@ -56,6 +56,12 @@
                 </div>
             </div>
             <div class="item">
+                <img src="assets/images/okra.png" alt="Okra Soup">
+                <div class="overlay">
+                    <p>Okra Soup</p>
+                </div>
+            </div>
+            <div class="item">
                 <img src="assets/images/akwete1.png" alt="Akwete Weaving">
                 <div class="overlay">
                     <p>The weaving of Akwete fabrics</p>
@@ -104,7 +110,7 @@
                 </div>
             </div>
             <div class="video-item">
-                <video src="assets/videos/nwa-dancing.MOV" width="400" height="400" controls autoplay muted></video>
+                <video src="assets/videos/nwa-dancing.MOV" width="500" height="200" controls autoplay muted></video>
                 <div class="overlay">
                     <p>Ekpe Festival in Umuahia</p>
                 </div>
