feat: modified html pages

--- a/gallery.html
+++ b/gallery.html
@@ -110,7 +110,7 @@
                 </div>
             </div>
             <div class="video-item">
-                <video src="assets/videos/nwa-dancing.MOV" width="500" height="200" controls autoplay muted></video>
+                <video src="assets/videos/nwa-dancing.MOV" width="500" height="200" controls muted></video>
                 <div class="overlay">
                     <p>Ekpe Festival in Umuahia</p>
                 </div>
