--- a/services.html
+++ b/services.html
@@ -80,7 +80,7 @@
             </div>
             <div class="service">
                 <figure>
-                    <video src="assets/videos/ekpo-moving.MOV" width="400" controls autoplay muted></video>
+                    <video src="assets/videos/ekpo-moving.MOV" width="400" controls muted></video>
                     <figcaption>Ekpe Cultural Festival</figcaption>
                 </figure>
                 <p>
