--- a/contact.html
+++ b/contact.html
@@ -38,7 +38,7 @@
             </div>
         </section>
         <section>
-            <p>We would like to hear from you. <br>Get in Touch with us any of the our offices below</p>
+            <p id="azuka">We would like to hear from you. <br>Get in Touch with us any of the our offices below</p>
             <div>
                 <table class="contact-table">
                     <caption>Our Office Contacts</caption>
@@ -66,8 +66,8 @@
             </div>
         </section>
         <section class="tell">
-            <div>
-                <p class="feedback">
+            <div class="feedback">
+                <p>
                     Tell them if we have done well. Tell us if we did bad.
                 </p>
                 <form>
