modified html page

--- a/gallery.html
+++ b/gallery.html
@@ -27,7 +27,7 @@
             <h1>Gallery</h1>
             <p>
                 Take a glimpse of the breathtaking experience and captivating moments that await you in Abia State. 
-                Our <strong>gallery showcases the beauty and diversity of the enchanting destination.</strong>
+                <br><strong>Our gallery showcases the beauty and diversity of the enchanting destination.</strong>
             </p>
         </div>
         <section class="gallery">
